Fix overflow scroll issue

--- a/assets/css/base/_layout.scss
+++ b/assets/css/base/_layout.scss
@@ -17,7 +17,7 @@ body {
         margin-left: auto;
         max-width: 50rem;
         padding: 0 $space-lg $space-lg;
-        width: 100%;
+        width: 100vw;
     }
 
     footer {
